# python_snake

./: .tool-versions  pyproject.toml  snake.py
python_snake/: __init__.py  game_handler.py
python_snake/board/: board.py
python_snake/fruit/: fruit.py
python_snake/keyboard/: __init__.py  user_input.py
python_snake/snake/: __init__.py  snake.py
